feat: fix logging of integration tests